# phyai

./: .codespellrc  .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
phyai/: pyproject.toml
phyai-ext/: CMakeLists.txt  pyproject.toml
phyai-ext/csrc/radix_cache/: atoms.cpp  atoms.h  events.h  ffi_binding.cpp  ffi_objects.h  owned_units.cpp  owned_units.h  prefix_cache.cpp  prefix_cache.h  storage_backend.cpp  storage_backend.h  unit_allocator.cpp  unit_allocator.h
phyai-ext/csrc/radix_cache/async/: op_handle.h
phyai-ext/csrc/radix_cache/mamba/: hybrid_prefix_cache.cpp  hybrid_prefix_cache.h  mamba_allocator.cpp  mamba_allocator.h  mamba_slot.cpp  mamba_slot.h
phyai-ext/csrc/radix_cache/tree/: eviction.cpp  eviction.h  node_ref.h  node_resource.h  radix_tree.cpp  radix_tree.h  tree_node.cpp  tree_node.h
phyai-ext/include/phyai_ext/radix_cache/: tier.h
phyai-ext/src/phyai_ext/: __init__.py  _ffi_api.py
phyai-ext/src/phyai_ext/radix_cache/: __init__.py  __init__.pyi
phyai-ext/tests/radix_cache/: test_advanced.py  test_async_op.py  test_cross_tier_and_nested.py  test_eviction_policies.py  test_hybrid.py  test_multimodal.py  test_paired.py  test_pending_and_recovery.py  test_prefix_cache.py
phyai-kernel/: pyproject.toml
phyai-kernel/benchmark/: bench_rmsnorm.py
phyai-kernel/phyai_kernel/: __init__.py  __main__.py
phyai-kernel/phyai_kernel/cpu/: __init__.py
phyai-kernel/phyai_kernel/cpu/jit/: __init__.py
phyai-kernel/phyai_kernel/cuda/: __init__.py
phyai-kernel/phyai_kernel/cuda/jit/: __init__.py
phyai-kernel/phyai_kernel/jit_utils/: __init__.py  compile.py
phyai-kernel/phyai_kernel/triton/: __init__.py  ada_rms_norm.py  layer_norm.py  masked_embedding.py  paged_kv_indices.py  rms_norm.py
phyai-kernel/tests/: conftest.py  test_adarmsnorm.py  test_layernorm.py  test_masked_embedding.py  test_paged_kv_indices.py
phyai-model-optimizer/: pyproject.toml
phyai-model-optimizer/src/phyai_model_optimizer/: __init__.py
phyai-utils-tools/: pyproject.toml
phyai-utils-tools/src/phyai_utils_tools/: __init__.py  logging.py
phyai-utils-tools/src/phyai_utils_tools/models/: __init__.py
phyai-utils-tools/src/phyai_utils_tools/models/cosmos3/: __init__.py  neg_prompts.json  processor_cosmos3.py  steps_cosmos3.py
phyai-utils-tools/src/phyai_utils_tools/models/pi0/: __init__.py  processor_pi0.py  steps_pi0.py
phyai-utils-tools/src/phyai_utils_tools/models/pi05/: __init__.py  ops_pi05.py  processor_pi05.py  steps_pi05.py
phyai-utils-tools/src/phyai_utils_tools/processing/: __init__.py  base_processor.py  pipeline.py  transition.py  types.py
phyai-utils-tools/src/phyai_utils_tools/processing/ops/: __init__.py  image_ops.py
phyai-utils-tools/src/phyai_utils_tools/processing/steps/: __init__.py  action_steps.py  batch_steps.py  device_steps.py  image_steps.py  normalize_steps.py  rename_steps.py  text_steps.py
phyai-utils-tools/src/phyai_utils_tools/tokenizer/: __init__.py  loader.py
phyai-utils-tools/tests/: test_image_ops.py  test_normalize_steps.py  test_pi05_processor.py  test_pi0_processor.py  test_pipeline.py  test_serialization.py
phyai/src/phyai/: __init__.py  engine.py  engine_config.py  env.py
phyai/src/phyai/cache/radix_cache/: encoding.py  multimodal.py
phyai/src/phyai/layers/: __init__.py  activation.py  conv.py  layer_norm.py  rotary_embedding.py  transformer_block.py
phyai/src/phyai/layers/attention/: __init__.py  common.py  enums.py  utils.py
phyai/src/phyai/layers/linear/: __init__.py  backend.py  dispatch.py  layers.py  loaders.py  registry.py  spec.py
phyai/src/phyai/layers/mlp/: __init__.py  dense_mlp.py
phyai/src/phyai/layers/quant/: __init__.py  fp8.py  nvfp4.py
phyai/src/phyai/layers/vocab_embedding/: layers.py
phyai/src/phyai/models/: __init__.py  configuration.py
phyai/src/phyai/models/cosmos3/: __init__.py  avae_sound.py  configuration_cosmos3.py  main_cosmos3.py  main_cosmos3_policy.py  model_runner_cosmos3.py  model_runner_policy_cosmos3.py  model_runner_vae_cosmos3.py  modeling_cosmos3.py  sampler_unipc.py  scheduler_ws1_cosmos3.py  scheduler_ws1_cosmos3_policy.py  vae_wan.py
phyai/src/phyai/models/pi0/: __init__.py  configuration_pi0.py  img_preprocess_pi0.py  main_pi0.py  model_runner_pi0.py  modeling_pi0.py  scheduler_ws1_pi0.py  tokenization_pi0.py
phyai/src/phyai/models/pi05/: __init__.py  (+8 more)
phyai/src/phyai/parallel/: __init__.py  backend.py  dispatch.py  dist.py  exceptions.py  mesh.py  ops.py  registry.py  state.py
phyai/src/phyai/radix_cache/: __init__.py  config.py  encoding.py  hybrid.py  multimodal.py  paired.py
phyai/src/phyai/runtime/: __init__.py  cuda_graph_manager.py  ipc_buffer.py  model_runner.py  tensor_dump.py
phyai/src/phyai/tokenizer/: __init__.py  loader.py
phyai/src/phyai/utils/: __init__.py  checkpoint.py  cuda.py  profile.py
phyai/src/phyai/vgpu/: __init__.py  _spec.py  backend.py  exceptions.py  partition.py  state.py  topology.py  vgpu.py
phyai/src/phyai/weights/: __init__.py  loader.py  shards.py
phyai/tests/: conftest.py
phyai/tests/layers/: test_layer_norm.py  test_rotary_embedding.py  test_transformer_block.py  test_vocab_embedding.py
phyai/tests/layers/attention/: test_attention.py  test_flashinfer_paged.py  test_paged_attention.py
phyai/tests/layers/linear/: conftest.py  test_dispatch.py  test_kernel_flashinfer.py  test_kernel_torch.py  test_layers.py  test_loaders.py  test_registry.py  test_spec.py
phyai/tests/layers/mlp/: test_dense_mlp.py
phyai/tests/parallel/: __init__.py  multiprocess.py  test_collectives.py  test_compile.py  test_dispatch.py  test_gloo.py  test_mesh.py  test_registry.py  test_state.py  test_ws1.py
phyai/tests/utils/: test_checkpoint.py
phyai/tests/vgpu/: __init__.py  test_backend_resolution.py  test_leak_regression.py  test_partition_flashinfer.py  test_partition_torch.py  test_topology.py  test_vgpu_basic.py  test_vgpu_concurrency.py  test_world_size_guard.py
phyai/tests/weights/: __init__.py  conftest.py  test_loader.py  test_shards.py
(+100 files in other folders)
