[project]
name = "phyai-monorepo"
version = "0.1.0"
description = "phyai — Physical AI. Workspace coordinator."
requires-python = ">=3.12"
dependencies = [
    "phyai",
    "phyai-kernel",
    "phyai-ext",
]

[tool.uv]
package = false

[tool.uv.workspace]
members = ["phyai", "phyai-kernel", "phyai-ext"]

[tool.uv.sources]
phyai = { workspace = true }
phyai-kernel = { workspace = true }
phyai-ext = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.6",
]

[tool.pytest.ini_options]
addopts = ["-ra", "--import-mode=importlib"]
testpaths = ["phyai/tests", "phyai-kernel/tests", "phyai-ext/tests"]
pythonpath = ["phyai/src", "phyai-kernel", "phyai-ext/src"]
