[project]
name = "phyai-ext"
dynamic = ["version"]
description = "CMake AOT-compiled extensions for phyai."
requires-python = ">=3.12"
dependencies = [
    "apache-tvm-ffi",
]

[build-system]
requires = ["scikit-build-core>=0.10", "apache-tvm-ffi", "setuptools-scm>=8"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
minimum-version = "build-system.requires"
build-dir = "build/{wheel_tag}"
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"
# The only compiled artifact is libphyai_ext_core.so, loaded at runtime via
# tvm-ffi's dlopen-style FFI loader — it is NOT a CPython extension module and
# links no CPython ABI. So the wheel is Python-version-agnostic: tag it
# py3-none-<platform> (one wheel for every CPython 3.x) instead of the default
# cp3XX-cp3XX, which would falsely pin it to the building interpreter.
wheel.py-api = "py3"

[tool.setuptools_scm]
root = ".."
fallback_version = "0.1.0"

[tool.uv]
cache-keys = [
    { file = "pyproject.toml" },
    { file = "CMakeLists.txt" },
    { file = "csrc/**/*.{h,c,hpp,cpp,cc,cxx,cu,cuh}" },
    { file = "include/**/*.{h,hpp,cuh}" },
    { file = "third_party/**/*.{h,c,hpp,cpp,cc,cxx}" },
]
