[project]
name = "phyai-utils-tools"
dynamic = ["version"]
description = "phyai — Shared utilities and tools."
requires-python = ">=3.12"
dependencies = [
    "av>=14.0.0",
    "huggingface-hub",
    "numpy",
    "torch==2.11",
    "transformers==5.8.1",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"
raw-options = { root = "..", fallback_version = "0.1.0" }

[tool.hatch.build.targets.wheel]
packages = ["src/phyai_utils_tools"]
