[project]
name = "phyai"
version = "0.1.0"
description = "phyai — Physical AI. Main library."
requires-python = ">=3.12"
dependencies = [
    "phyai-kernel",
    "numpy",
    "torch",
    "flashinfer-python",
]

[project.optional-dependencies]
ext = ["phyai-ext"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/phyai"]

[tool.uv.sources]
phyai-kernel = { workspace = true }
phyai-ext = { workspace = true }
