[project]
name = "phyai"
version = "0.1.0"
description = "phyai — Physical AI. Main library."
requires-python = ">=3.12"
dependencies = [
    "phyai-kernel",
    "numpy",
    "torch==2.11",
    "safetensors",
    "torchvision",
    "flashinfer-python==v0.6.11.post3",
    "transformers==5.8.1",
]

[project.optional-dependencies]
ext = ["phyai-ext"]
fastokenizer = ["fastokens>=0.2.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/phyai"]

[tool.uv.sources]
phyai-kernel = { workspace = true }
phyai-ext = { workspace = true }
