[project]
name = "phyai"
dynamic = ["version"]
description = "phyai — Physical AI. Main library."
requires-python = ">=3.12"
dependencies = [
    "phyai-kernel",
    "phyai-utils-tools",
    "numpy",
    "torch==2.11",
    "safetensors",
    "torchvision",
    "flashinfer-python==v0.6.12",
    "transformers==5.8.1",
    "huggingface-hub",
    "tqdm",
]

[project.optional-dependencies]
ext = ["phyai-ext"]
fastokenizer = ["fastokens>=0.2.0"]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"
raw-options = { root = "..", fallback_version = "0.1.0" }

[tool.hatch.build.targets.wheel]
packages = ["src/phyai"]

[tool.uv.sources]
phyai-kernel = { workspace = true }
phyai-ext = { workspace = true }
